--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <base href="http://yuichirotcy.github.io/asha-fusion">
+    <base href="http://tuttieee.com/asha-fusion">
     <title>ASHA fusion</title>
 
     
