--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ CouchDBはMaster-Master型のレプリケーションシステムを提供し，
 また，PouchDBはCouchDBのプロキシとして動作でき，ローカル・リモートを意識せず透過的にデータベースにアクセスできます．</p>
 
 <p>CouchDBはスキーマレスDBなので，項目の追加・削除やデータ構造の変更が容易です．
-使用シーンによって収集するデータが変わるHealth campでは重要な要素です．</p>
+使用シーンによって収集するデータを柔軟に変えることができます．</p>
 
                 </div>
                 
