--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ Health campを構成する任意のデバイスがサーバとして動作可能
 
 <ul>
 <li>各ローカルシステムで収集したデータは，持ち帰って一つのデータベースにマージできる</li>
+<li>デバイス間でデータを即時同期</li>
 <li>常時バックアップをとる冗長系</li>
 </ul>
 
