--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ Health campを構成する任意のデバイスがサーバとして動作可能
 <p>Public環境です．
 <strong>個人情報は入力しないでください</strong></p>
 
+<p>（主なユースケースはClosed環境ですが，
+このDemo版はインターネット上のサーバで動作しています）</p>
+
                 </div>
                 
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
