--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Health campを構成する任意のデバイスがサーバとして動作可能
                     <div class="clearfix"></div>
                     <h2 class="section-heading">System</h2>
                     <p>現バージョンのASHA fusionはWebベースのアプリケーションです．
-サーバ機はWebサーバとしてASHA fusionを各クライアントに配信します．</p>
+サーバ機ではASHA fusionを各クライアントに配信するWebサーバと，データを保持するデータベースサーバが動作します．</p>
 
 <p>データベースは<a href="http://couchdb.apache.org/">CouchDB</a>およびCouchDBのJavaScriptクローンである<a href="https://pouchdb.com/">PouchDB</a>を採用しています．
 CouchDBはMaster-Master型のレプリケーションシステムを提供し，各デバイスのCouchDB間でシームレスにデータを同期します．
