--- a/index.html
+++ b/index.html
@@ -229,11 +229,7 @@ CouchDBはMaster-Master型のレプリケーションシステムを提供し，
 
 <ul>
 <li>CouchDB</li>
-<li>Node.js
-
-<ul>
-<li>ES6</li>
-</ul></li>
+<li>Node.js</li>
 <li>React
 
 <ul>
@@ -241,7 +237,11 @@ CouchDBはMaster-Master型のレプリケーションシステムを提供し，
 </ul></li>
 <li>PouchDB</li>
 <li>webpack</li>
-<li>Babel</li>
+<li>Babel
+
+<ul>
+<li>ES6</li>
+</ul></li>
 <li>gulp</li>
 <li>etc&hellip;</li>
 </ul>
